new java stuff
(cherry picked from commit f66bf9b58918966987b03ff342b020add7e5f413)